# opengl_android

./: .gitignore  README.md
NOTES/: Rotation.org
OpenGLAndroid/: .gitignore  settings.gradle
OpenGLAndroid/app/: build.gradle
OpenGLAndroid/app/src/androidTest/java/com/example/openglandroid/: ExampleInstrumentedTest.kt
OpenGLAndroid/app/src/main/: AndroidManifest.xml
OpenGLAndroid/app/src/main/cpp/: CMakeLists.txt  Camera.cpp  Camera.h  GLMath.cpp  GLMath.h  RendererGL3.cpp  RendererGL3.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  native-lib.cpp  native_opengl_app.cpp  native_opengl_app.h  utils.cpp  utils.h
OpenGLAndroid/app/src/main/java/com/example/openglandroid/: MainActivity.kt
OpenGLAndroid/app/src/main/res/layout/: activity_main.xml
OpenGLAndroid/app/src/main/res/values/: strings.xml
OpenGLAndroid/app/src/test/java/com/example/openglandroid/: ExampleUnitTest.kt
OpenGLAndroid/gradle/wrapper/: gradle-wrapper.properties
